# ECE-501-Project

./: .gitignore  .gitmodules  execution_config.yaml  pyproject.toml  query_config.yaml  readme.md  requirements.txt
docs/: possible_schema.txt  queries.md  src_schema.txt
docs/mid-point/: original_schema_analysis.py  readme.md
docs/mid-point/results/: math_scores_across_subgroups_results_all.text
docs/mid-point/scripts/: single_grapher.py
docs/proposal/: test.py
docs/schemas/: all_raw_data_schema.txt  studed_schema.txt  temp.txt
final-project/: .gitignore  Makefile  Makefile.bak  README.md  environment.yml  schema_export.sql
final-project/.cursor/rules/: conda.mdc
final-project/baselines/baseline1_wide/: 00_schema.sql  10_load.sql  build.sh
final-project/baselines/baseline2_normalized/: 00_schema.sql  10_load.sql  build.sh
final-project/docs/: BUILD.md  ERD.dbml  ERD.dot  ERD_export.sql  ERD_export.sqliteish.sql  ERD_star.dot  EXPANSION.md  RERUN.md  USAGE.md  WORKFLOW.md  data_dictionary.md  experiments_plan.md  index_plan.md  queries_baselines.md  workflow.md
final-project/etl/: clean_standardize.py  map_subgroups.csv  map_subgroups.csv.bak  run_sql.py
final-project/experiments/: ETL.py  benchmark_queries.sql  capture_plans.py  config.py  connect_to_access.py  init_db.py  load_sample_year.py  time_queries.py
final-project/experiments/original_data/query1/: results.csv
final-project/scripts/: auto_fill_subgroups.py  build.py  build_subgroup_dict.py  checks.sh  comparison_grapher.py  dbml_to_dot.py  download_report_cards.py  extract_src.py  extract_src.sh  fixcsv_headers.py  fixcsv_headers.sh  grapher.py  import_csv_to_sqlite.py  import_csv_to_sqlite.sh  load_map_subgroups.py  normalize_headers.py  normalize_headers.sh  original_data.py  run_pipeline.py  schema_report.py  time_summary_refresh.py  vacuum_analyze.sh
final-project/sql/: 00_schema.sql  01_seed_dims.sql  02_upsert_orgs.sql  03_indexes.sql  09_staging.sql  09_staging_cleanup.sql  09_staging_persistent.sql  10_load_enrollment.sql  11_load_attendance.sql  12_load_assessment.sql  13_load_expenditures.sql  20_refresh_summary.sql  30_views.sql  40_exports.sql  99_checks.sql  original_data_analysis.sql
final-project/sql/query1/: README_STAR.md  correlations.sql  create_math_overall_star.sql  create_math_src_star.sql  demo_view.sql  demo_view_star.sql  reset_star.sql
final-project/sql/query2/: correlation_star.sql  query_star.sql
final-project/sql/query3/: correlation_star.sql  data_star.sql
final-project/tests/: test_fk_violations.sql  test_rates_range.sql  test_rowcounts.sql
needs_to_be_reorged/: config.py
needs_to_be_reorged/results/: overlayed_data.csv  spreadout.text
needs_to_be_reorged/scripts/: original_data_math_by_subgroup.py
proposal example/: main.py  test.py  test2.py
sql/baseline_query1/: create_math_overall.sql  create_math_src.sql  create_pairs_year.sql  demo_view.sql  reset.sql
sql/baseline_query2/: correlation.sql  query.sql
sql/baseline_query3/: correlation.sql  data.sql
sql/star_query1/: composition_preview.sql  correlation.sql  correlations.sql  create_math_outcome.sql  create_math_overall_star.sql  create_math_src_star.sql  create_pairs_year.sql  demo_view_star.sql  enroll_src_preview.sql  math_school_preview.sql  math_src_preview.sql  pairs.sql  query.sql
sql/star_query2/: correlations.sql  query.sql
sql/star_query3/: halfway.sql  query.sql
src/: align_schema.py  config.py  downloader.py  initial_translation.py
src/app/: __init__.py  datasets.py  queries.py
src/execute/: __init__.py  sql.py
src/ingest/: datasets.py  downloader.py
src/load/: convert_to_sqlite.py
src/reporting/: models.py  operations.py  plotter.py  setup.py
src/transform/: __init__.py  ingest.py  lookup.py  setup.py  star_schema_builder.py
src/transform/sql/: schema_core.sql  schema_facts_assessment_accountability.sql  schema_facts_enrollment_demographics.sql  schema_facts_grad_postsecondary.sql  schema_facts_staffing_expenditures.sql
util/: query_sql_combiner.py
util (temp)/: downloader.py
(+3 files in other folders)
