[project]
name = "ECE-501-Project"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyodbc",
    "matplotlib",
    "pyyaml",
    "pyperclip",
    "scipy",
    "numpy",
]

[project.scripts]
run_all = "execute.__init__:run_queryspecs"  # <— launching script
test_config = "app.__init__:test_load_execution_config"  # <— test script
plot = "reporting.plotter:plot_query_percentiles_cli" # <— plotting script
#the usage is: 
# plot {query_name} \ 
#   {version_label} \
#   {include "all" to plot al results from version, no "all" will only plot latest launch}
run = "execute.__init__:cli_run_queryspec" # <— single query run script, 
#usage is: run {query_name} {version_label}
# run baseline_query2 2.0
# run baseline_query2 2.0 --runs 10 --dataset-limits 10000,500000


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}  # updated for src layout

[tool.setuptools.packages.find]
where = ["src"]  # specify the src directory

[tool.poetry]
name = "ingest"
version = "0.1.0"
description = ""

[tool.poetry.packages]
include = [{ include = "ingest", from = "src" }, { include = "app", from = "src" }]

